--- a/food-ordering/src/main/resources/application.properties
+++ b/food-ordering/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=food-ordering
+spring.datasource.url=jdbc:mysql://localhost:3306/mcdonalds
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLSInnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.show-sql=true
