--- a/food-ordering/src/main/resources/application.properties
+++ b/food-ordering/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=food-ordering
-spring.datasource.url=jdbc:mysql://localhost:3306/mcdonalds
+spring.datasource.url=jdbc:mysql://localhost:3306/food_ordering?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLSInnoDBDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.show-sql=true
