--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,16 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "11.10.4",
     "@material-table/core": "^4.3.27",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/x-charts": "6.19.8",
+    "@mui/x-data-grid-generator": "^7.3.0",
+    "@mui/x-data-grid-pro": "^7.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "clsx": "^2.1.0",
+    "date-fns": "^2.28.0",
     "js-joda": "^1.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,13 +27,8 @@
     "react-query": "^3.34.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4",
-    "clsx": "^2.1.0",
-    "@mui/x-charts": "6.19.8",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "11.10.4",
     "simplebar-react": "^2.3.7",
-    "date-fns": "^2.28.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
