--- a/web-app/package.json
+++ b/web-app/package.json
@@ -17,9 +17,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.28.0",
+    "express": "^4.19.2",
     "js-joda": "^1.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
