--- a/web-app/package.json
+++ b/web-app/package.json
@@ -30,6 +30,7 @@
     "react-query": "^3.34.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-swipeable-views": "^0.14.0",
     "simplebar-react": "^2.3.7",
     "web-vitals": "^2.1.4"
   },
